[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Rect" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Top" type="MarginContainer" parent="Rect"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 124.0

[node name="TopContainer" type="HBoxContainer" parent="Rect/Top"]
margin_right = 984.0
margin_bottom = 158.0

[node name="Money" type="VBoxContainer" parent="Rect/Top/TopContainer"]
margin_right = 870.0
margin_bottom = 158.0
rect_min_size = Vector2( 150, 100 )
size_flags_horizontal = 3

[node name="PlayerMoneyBox" type="HBoxContainer" parent="Rect/Top/TopContainer/Money"]
margin_right = 870.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="PlayerMoneyTitle" type="Label" parent="Rect/Top/TopContainer/Money/PlayerMoneyBox"]
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "Player Money:"

[node name="PlayerMoney" type="Label" parent="Rect/Top/TopContainer/Money/PlayerMoneyBox"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "x"

[node name="EnemyMoneyBox" type="HBoxContainer" parent="Rect/Top/TopContainer/Money"]
margin_top = 54.0
margin_right = 870.0
margin_bottom = 104.0
size_flags_horizontal = 3

[node name="EnemyMoneyTitle" type="Label" parent="Rect/Top/TopContainer/Money/EnemyMoneyBox"]
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "Enemy Money:"

[node name="EnemyMoney" type="Label" parent="Rect/Top/TopContainer/Money/EnemyMoneyBox"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "x"

[node name="EnemyNextLevelBox" type="HBoxContainer" parent="Rect/Top/TopContainer/Money"]
margin_top = 108.0
margin_right = 870.0
margin_bottom = 158.0
size_flags_horizontal = 3

[node name="EnemyNextLevelTitle" type="Label" parent="Rect/Top/TopContainer/Money/EnemyNextLevelBox"]
margin_right = 119.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "Enemy Next Level:"

[node name="EnemyNextLevel" type="Label" parent="Rect/Top/TopContainer/Money/EnemyNextLevelBox"]
margin_left = 123.0
margin_right = 242.0
margin_bottom = 50.0
rect_min_size = Vector2( 119, 50 )
text = "x"

[node name="LifeDamage" type="VBoxContainer" parent="Rect/Top/TopContainer"]
editor/display_folded = true
margin_left = 874.0
margin_right = 984.0
margin_bottom = 158.0
rect_min_size = Vector2( 100, 100 )

[node name="LivesBox" type="HBoxContainer" parent="Rect/Top/TopContainer/LifeDamage"]
margin_right = 110.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 0 )

[node name="LivesTitle" type="Label" parent="Rect/Top/TopContainer/LifeDamage/LivesBox"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "Lives:"
align = 2

[node name="Lives" type="Label" parent="Rect/Top/TopContainer/LifeDamage/LivesBox"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "x"
align = 1

[node name="DamageBox" type="HBoxContainer" parent="Rect/Top/TopContainer/LifeDamage"]
margin_top = 54.0
margin_right = 110.0
margin_bottom = 104.0
rect_min_size = Vector2( 100, 0 )

[node name="DamageTitle" type="Label" parent="Rect/Top/TopContainer/LifeDamage/DamageBox"]
margin_top = 18.0
margin_right = 56.0
margin_bottom = 32.0
text = "Damage:"

[node name="Damage" type="Label" parent="Rect/Top/TopContainer/LifeDamage/DamageBox"]
margin_left = 60.0
margin_right = 110.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "x"
align = 1
valign = 1

[node name="Bot" type="MarginContainer" parent="Rect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -50.0
margin_right = -20.0
margin_bottom = -20.0

[node name="BotContainer" type="HBoxContainer" parent="Rect/Bot"]
margin_right = 984.0
margin_bottom = 50.0

[node name="EnemyLevelBox" type="HBoxContainer" parent="Rect/Bot/BotContainer"]
margin_right = 880.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 3

[node name="EnemyLevelTitle" type="Label" parent="Rect/Bot/BotContainer/EnemyLevelBox"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 32.0
text = "Spawning Enemy Level:"

[node name="EnemyLevel" type="Label" parent="Rect/Bot/BotContainer/EnemyLevelBox"]
margin_left = 152.0
margin_top = 18.0
margin_right = 159.0
margin_bottom = 32.0
text = "x"

[node name="PlayerLevelBox" type="HBoxContainer" parent="Rect/Bot/BotContainer"]
margin_left = 884.0
margin_right = 984.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )

[node name="PlayerLevelTitle" type="Label" parent="Rect/Bot/BotContainer/PlayerLevelBox"]
margin_top = 18.0
margin_right = 81.0
margin_bottom = 32.0
text = "Player Level:"

[node name="PlayerLevel" type="Label" parent="Rect/Bot/BotContainer/PlayerLevelBox"]
margin_left = 85.0
margin_top = 18.0
margin_right = 92.0
margin_bottom = 32.0
text = "x"
